# cutlass_proj

./: .gitignore  .gitmodules  CMakeLists.txt  CUTLASS_PYTHON_README.md  DEVELOPMENT.md  Dockerfile  README.md  example_usage.py  pyproject.toml  requirements.txt  setup.py
benchmarks/: README.md  __init__.py  utils.py
benchmarks/kernels/: __init__.py  cute_kernels.py  cutlass_kernels.py  triton_kernels.py
benchmarks/problems/: __init__.py  benchmark_gemm.py  benchmark_grouped_gemm.py
examples/: basic_gemm.py
scripts/: build.sh  init_submodule.sh
src/: __init__.py  utils.py
src/bindings/: bindings.cpp  cutlass_gemm.cpp  cutlass_gemm.h  cutlass_gemm_wrapper.cu  kernels.cpp
src/cutlass_python/: __init__.py
src/cutlass_python/bindings/: bindings.cpp  kernels.cpp
src/cutlass_python/kernels/: __init__.py
src/examples/: __init__.py
tests/: test_basic.py
