[build-system]
requires = ["setuptools>=45", "wheel", "cmake>=3.18", "pybind11>=2.6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cutlass-proj"
version = "0.1.0"
description = "PyTorch integration for CUTLASS examples"
readme = "README.md"
requires-python = ">=3.7"
authors = [
    {name = "JungHoyoun"}
]
dependencies = [
    "torch>=1.9.0",
    "numpy>=1.19.0",
    "pybind11>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.8",
]

[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-data]
src = ["*.py"]

